# steel-arch-recognition-qt

./: CMakeLists.txt  README.md  design.pro  imag.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramdialog.cpp  paramdialog.h  paramdialog.ui
